[gd_scene load_steps=18 format=2]

[ext_resource path="res://world/environments/env_sunset.tres" type="Environment" id=1]
[ext_resource path="res://circuits/Circuit.gd" type="Script" id=2]
[ext_resource path="res://vehicles/NewCar.tscn" type="PackedScene" id=3]
[ext_resource path="res://effects/explosion1-Sheet.png" type="Texture" id=4]
[ext_resource path="res://urbankit/tileset.meshlib" type="MeshLibrary" id=5]
[ext_resource path="res://vehicles/Gordon.tscn" type="PackedScene" id=6]
[ext_resource path="res://music/pompy_lowres.ogg" type="AudioStream" id=7]
[ext_resource path="res://effects/explode8.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": false,
"name": "explode",
"speed": 10.0
} ]

[node name="Circuit" type="WorldEnvironment"]
environment = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Gordon" parent="." instance=ExtResource( 6 )]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -16.6334, 0.761685, 30 )

[node name="Seat" type="ConeTwistJoint" parent="Gordon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.164655, 0.391973 )
nodes/node_a = NodePath("../../Kart")
nodes/node_b = NodePath("../Torso")
swing_span = 30.0

[node name="Kart" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -17.3666, 0.366038, 30 )

[node name="FirstPersonCamera" type="Camera" parent="Kart"]
transform = Transform( -1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 0, 1.25, 0.65 )
cull_mask = 3
doppler_tracking = 2
fov = 72.0
near = 0.5
far = 128.0

[node name="CamPivot" type="Position3D" parent="."]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -38, 6.2, 72 )

[node name="Camera" type="Camera" parent="CamPivot"]
transform = Transform( -1, 2.26267e-08, -8.44439e-08, 0, 0.965926, 0.258819, 8.74228e-08, 0.258819, -0.965926, 0, 2.5, -2.5 )
cull_mask = 1048547
doppler_tracking = 2
current = true
fov = 80.0
near = 1.0
far = 128.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -6.0
pitch_scale = 0.8
autoplay = true
bus = "Music"

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="HUD"]
visible = false
modulate = Color( 0.854902, 0.878431, 0.152941, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -330.0
rect_rotation = 1.0
size_flags_horizontal = 3
text = "---  G O R D O N K A R T  ---"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 5 )
cell_size = Vector3( 4, 2, 4 )
cell_center_y = false
cell_scale = 4.0
data = {
"cells": PoolIntArray( 0, 0, 1441825, 3, 0, 655404, 65530, 0, 47, 65539, 0, 655410, 196603, 0, 1048628, 196612, 0, 720911, 327675, 0, 50, 327684, 0, 720911, 393219, 0, 655405, 458755, 0, 655410, -65536, 0, 1441806, -65535, 0, 1048596, -65534, 0, 1441812, -5, 0, 25, -4, 0, 1048597, -3, 0, 655383, -2, 0, 1048593, -1, 0, 1441812, 3, 1, 655404, 65530, 1, 1048619, 65539, 1, 655410, 196603, 1, 655401, 196612, 1, 720911, 327675, 1, 50, 327684, 1, 720911, 393219, 1, 655405, 458755, 1, 655410, -65536, 1, 1441806, -65535, 1, 1048596, -65534, 1, 1441812, -5, 1, 1048602, -4, 1, 1048597, -3, 1, 1441818, -2, 1, 1048596, -1, 1, 1441812, 0, 2, 1441825, 3, 2, 655404, 65530, 2, 47, 65539, 2, 655410, 196603, 2, 1048628, 196612, 2, 720911, 327675, 2, 50, 327684, 2, 720911, 393219, 2, 655405, 458755, 2, 655410, -65536, 2, 1441806, -65535, 2, 1048596, -65534, 2, 1441812, -5, 2, 25, -4, 2, 1048597, -3, 2, 1441818, -2, 2, 1048596, -1, 2, 1441812, 3, 3, 655404, 65530, 3, 1048619, 65539, 3, 655410, 196603, 3, 655401, 196612, 3, 720911, 327675, 3, 50, 327684, 3, 720911, 393219, 3, 655405, 458755, 3, 655410, -65536, 3, 1441806, -65535, 3, 1048596, -65534, 3, 1441812, -5, 3, 1048602, -4, 3, 1048597, -3, 3, 1441818, -2, 3, 1048596, -1, 3, 1441812, 0, 4, 655394, 3, 4, 1441848, 65530, 4, 47, 131075, 4, 1441845, 196603, 4, 1048628, 262147, 4, 1441845, 327675, 4, 50, 393219, 4, 655405, 458755, 4, 655410, -65536, 4, 1441806, -65535, 4, 1048596, -65534, 4, 1441812, -5, 4, 25, -4, 4, 1048597, -3, 4, 1441818, -2, 4, 1048596, -1, 4, 1441812, 3, 5, 41, 65530, 5, 1048619, 131075, 5, 41, 196603, 5, 655401, 262147, 5, 655408, 327675, 5, 50, -65536, 5, 20, -65535, 5, 17, -65534, 5, 1441812, -5, 5, 1048602, -4, 5, 1441813, -3, 5, 1441818, -2, 5, 1048596, -1, 5, 1441809, 3, 6, 41, 65530, 6, 47, 131075, 6, 41, 196603, 6, 1048628, 262147, 6, 655408, 327675, 6, 50, -65536, 6, 655380, -65535, 6, 1048593, -65534, 6, 1441812, -5, 6, 25, -4, 6, 1441813, -3, 6, 1441818, -2, 6, 1048596, -1, 6, 655377, 0, 7, 655394, 3, 7, 41, 65530, 7, 1048619, 131075, 7, 41, 196603, 7, 655401, 262147, 7, 655408, 327675, 7, 50, -65536, 7, 14, -65535, 7, 1048596, -65534, 7, 1441812, -5, 7, 1048602, -4, 7, 1441813, -3, 7, 1441818, -2, 7, 1048596, -1, 7, 1441812, 0, 8, 655393, 3, 8, 41, 65530, 8, 47, 131075, 8, 41, 196603, 8, 1048628, 262147, 8, 655408, 327675, 8, 50, -65536, 8, 14, -65535, 8, 1048596, -65534, 8, 1441812, -5, 8, 25, -4, 8, 25, -3, 8, 25, -2, 8, 1048596, -1, 8, 1441812, 3, 9, 41, 65531, 9, 47, 65532, 9, 655401, 65533, 9, 655402, 131075, 9, 41, 196604, 9, 655404, 196605, 9, 50, 262140, 9, 50, 262147, 9, 655408, 327675, 9, 50, -65536, 9, 20, -65535, 9, 17, -65534, 9, 1441812, -2, 9, 1048596, -1, 9, 1441809, 3, 10, 41, 65533, 10, 41, 131075, 10, 41, 196605, 10, 50, 262140, 10, 50, 262147, 10, 655408, 327675, 10, 50, -65536, 10, 655380, -65535, 10, 1048593, -65534, 10, 1441812, -2, 10, 1048596, -1, 10, 655377, 0, 11, 41, 1, 11, 65, 2, 11, 65, 3, 11, 41, 65533, 11, 41, 65534, 11, 65, 65535, 11, 65, 131072, 11, 41, 131073, 11, 41, 131074, 11, 41, 131075, 11, 41, 196604, 11, 41, 196605, 11, 41, 196606, 11, 41, 196607, 11, 41, 262144, 11, 655408, 262145, 11, 655408, 262146, 11, 655408, 262147, 11, 655408, 327675, 11, 50, 327676, 11, 655408, 327677, 11, 655408, 327678, 11, 655408, 327679, 11, 655408, -65535, 11, 1048596, -65534, 11, 1441812, -2, 11, 1048596, -1, 11, 1441812, 0, 12, 41, 3, 12, 41, 65533, 12, 41, 131072, 12, 41, 131073, 12, 41, 131074, 12, 41, 131075, 12, 41, 196606, 12, 41, 196607, 12, 41, 327675, 12, 50, -65535, 12, 1048596, -65534, 12, 1441812, -2, 12, 1048596, -1, 12, 1441812, 0, 13, 1441833, 1, 13, 1048637, 2, 13, 1048637, 3, 13, 1441833, 65533, 13, 1441833, 65534, 13, 1048637, 65535, 13, 1048637, 131072, 13, 1441833, 131075, 13, 1441833, 196605, 13, 1441833, 0, 14, 1441833, 3, 14, 1441833, 65533, 14, 1441833, 65537, 14, 1048637, 65538, 14, 1048637, 131070, 14, 1048637, 131071, 14, 1048637, 131072, 14, 1441833, 131075, 14, 1441833, 196605, 14, 1441833, 0, 15, 1441833, 3, 15, 1441833, 65533, 15, 1441833, 131072, 15, 1441833, 131075, 15, 1441833, 196605, 15, 1441833, 0, 65521, 1441833, 3, 65521, 1441833, 65533, 65521, 1441833, 131072, 65521, 1441833, 131075, 65521, 1441833, 196605, 65521, 1441833, 0, 65522, 1441833, 3, 65522, 1441833, 65533, 65522, 1441833, 65537, 65522, 1441853, 65538, 65522, 1441853, 131070, 65522, 1441853, 131071, 65522, 1441853, 131072, 65522, 1441833, 131075, 65522, 1441833, 196605, 65522, 1441833, 0, 65523, 1441833, 1, 65523, 1441853, 2, 65523, 1441853, 3, 65523, 1441833, 65533, 65523, 1441833, 65534, 65523, 1441853, 65535, 65523, 1441853, 131072, 65523, 1441833, 131075, 65523, 1441833, 196605, 65523, 1441833, 0, 65524, 41, 3, 65524, 41, 65533, 65524, 41, 131072, 65524, 41, 131073, 65524, 41, 131074, 65524, 41, 131075, 65524, 41, 196605, 65524, 1048623, 196606, 65524, 41, 196607, 65524, 41, 327677, 65524, 50, -65535, 65524, 1048596, -65534, 65524, 1441812, -2, 65524, 1048596, -1, 65524, 1441812, 0, 65525, 41, 1, 65525, 65, 2, 65525, 65, 3, 65525, 41, 65533, 65525, 41, 131072, 65525, 41, 131073, 65525, 41, 131074, 65525, 41, 131075, 65525, 41, 196605, 65525, 1048623, 196606, 65525, 41, 196607, 65525, 41, 262144, 65525, 655408, 262145, 65525, 655408, 262146, 65525, 655408, 262147, 65525, 655408, 327677, 65525, 655408, 327678, 65525, 655408, 327679, 65525, 655408, -65535, 65525, 1048596, -65534, 65525, 1441812, -2, 65525, 1048596, -1, 65525, 1441812, 3, 65526, 41, 65533, 65526, 41, 131075, 65526, 41, 196605, 65526, 1048623, 262147, 65526, 655408, 327677, 65526, 50, -65536, 65526, 20, -65535, 65526, 17, -65534, 65526, 1441812, -2, 65526, 1048596, -1, 65526, 1441809, 3, 65527, 41, 65531, 65527, 1048623, 65532, 65527, 41, 65533, 65527, 42, 131075, 65527, 41, 196603, 65527, 1048623, 196604, 65527, 1048623, 196605, 65527, 1048623, 262147, 65527, 655408, 327677, 65527, 50, -65536, 65527, 655380, -65535, 65527, 1048593, -65534, 65527, 1441812, -2, 65527, 1048596, -1, 65527, 655377, 0, 65528, 655393, 3, 65528, 41, 65530, 65528, 47, 131075, 65528, 41, 196603, 65528, 1048628, 262147, 65528, 655408, 327675, 65528, 50, -65536, 65528, 14, -65535, 65528, 1048596, -65534, 65528, 1441812, -5, 65528, 25, -4, 65528, 25, -3, 65528, 25, -2, 65528, 1048596, -1, 65528, 1441812, 0, 65529, 655394, 3, 65529, 41, 65530, 65529, 1048619, 131075, 65529, 41, 196603, 65529, 655401, 262147, 65529, 655408, 327675, 65529, 50, -65536, 65529, 14, -65535, 65529, 1048596, -65534, 65529, 1441812, -5, 65529, 1048602, -4, 65529, 1441813, -3, 65529, 1441818, -2, 65529, 1048596, -1, 65529, 1441812, 3, 65530, 41, 65530, 65530, 47, 131075, 65530, 41, 196603, 65530, 1048628, 262147, 65530, 655408, 327675, 65530, 50, -65536, 65530, 20, -65535, 65530, 17, -65534, 65530, 1441812, -5, 65530, 25, -4, 65530, 1441813, -3, 65530, 1441818, -2, 65530, 1048596, -1, 65530, 1441809, 3, 65531, 41, 65530, 65531, 1048619, 131075, 65531, 41, 196603, 65531, 655401, 262147, 65531, 655408, 327675, 65531, 50, -65536, 65531, 655380, -65535, 65531, 1048593, -65534, 65531, 1441812, -5, 65531, 1048602, -4, 65531, 1441813, -3, 65531, 1441818, -2, 65531, 1048596, -1, 65531, 655377, 0, 65532, 655394, 3, 65532, 1441848, 65530, 65532, 47, 131075, 65532, 1441845, 196603, 65532, 1048628, 262147, 65532, 1441845, 327675, 65532, 50, 393219, 65532, 655405, 458755, 65532, 655410, -65536, 65532, 1441806, -65535, 65532, 1048596, -65534, 65532, 1441812, -5, 65532, 25, -4, 65532, 1048597, -3, 65532, 1441818, -2, 65532, 1048596, -1, 65532, 1441812, 3, 65533, 655404, 65530, 65533, 1048619, 65539, 65533, 655410, 196603, 65533, 655401, 196612, 65533, 720911, 327675, 65533, 50, 327684, 65533, 720911, 393219, 65533, 655405, 458755, 65533, 655410, -65536, 65533, 1441806, -65535, 65533, 1048596, -65534, 65533, 1441812, -5, 65533, 1048602, -4, 65533, 1048597, -3, 65533, 1441818, -2, 65533, 1048596, -1, 65533, 1441812, 0, 65534, 1441825, 3, 65534, 655404, 65530, 65534, 47, 65539, 65534, 655410, 196603, 65534, 1048628, 196612, 65534, 720911, 327675, 65534, 50, 327684, 65534, 720911, 393219, 65534, 655405, 458755, 65534, 655410, -65536, 65534, 1441806, -65535, 65534, 1048596, -65534, 65534, 1441812, -5, 65534, 25, -4, 65534, 1048597, -3, 65534, 1441818, -2, 65534, 1048596, -1, 65534, 1441812, 3, 65535, 655404, 65530, 65535, 1048619, 65539, 65535, 655410, 196603, 65535, 655401, 196612, 65535, 720911, 327675, 65535, 50, 327684, 65535, 720911, 393219, 65535, 655405, 458755, 65535, 655410, -65536, 65535, 1441806, -65535, 65535, 1048596, -65534, 65535, 1441812, -5, 65535, 1048602, -4, 65535, 1048597, -3, 65535, 1441815, -2, 65535, 17, -1, 65535, 1441812 )
}
__meta__ = {
"_edit_lock_": true,
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[node name="Interactables" type="Spatial" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="SunLight" type="DirectionalLight" parent="."]
transform = Transform( 0.965926, 0.0669873, 0.25, 0, -0.965926, 0.258819, 0.258819, -0.25, -0.933013, 0, 10, 0 )
visible = false
layers = 2
light_color = Color( 1, 0.188235, 0, 1 )
light_energy = 0.6
light_cull_mask = 4293918723
shadow_enabled = true
shadow_color = Color( 0.12549, 0, 1, 1 )
shadow_bias = 1.0
directional_shadow_mode = 0
directional_shadow_max_distance = 32.0
__meta__ = {
"_edit_lock_": true
}

[node name="Explode" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 8 )
attenuation_model = 3
bus = "Sfx"

[node name="Visual" type="AnimatedSprite3D" parent="Explode"]
cast_shadow = 0
offset = Vector2( 0, 32 )
pixel_size = 0.1
billboard = 1
transparent = false
double_sided = false
alpha_cut = 1
frames = SubResource( 31 )
animation = "explode"
frame = 7

[node name="Player1" type="Label3D" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -15.5, 6, 30 )
pixel_size = 0.05
shaded = true
double_sided = false
alpha_cut = 1
text = "Player 1:
xXx_gordonbgdu32_xXx"

[node name="Player2" type="Label3D" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -15.5, 6, 23 )
pixel_size = 0.05
shaded = true
double_sided = false
alpha_cut = 1
text = "Player 2:
xXx_C4G1B1D3V_xXx"

[node name="Circuit1" type="Label3D" parent="."]
transform = Transform( 1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, -3, 6, -39 )
pixel_size = 0.05
shaded = true
double_sided = false
alpha_cut = 1
text = "Gordon City Center
Circuit for beginners
↓↓↓"

[node name="Circuit2" type="Label3D" parent="."]
transform = Transform( 1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 7, 6, -39 )
pixel_size = 0.05
shaded = true
double_sided = false
alpha_cut = 1
text = "Coming soon"

[node name="Circuit3" type="Label3D" parent="."]
transform = Transform( -1, 0, -2.62268e-07, 0, 1, 0, 2.62268e-07, 0, -1, 7, 6, 43 )
pixel_size = 0.05
shaded = true
double_sided = false
alpha_cut = 1
text = "Coming soon"

[node name="Circuit4" type="Label3D" parent="."]
transform = Transform( -1, 0, -2.62268e-07, 0, 1, 0, 2.62268e-07, 0, -1, -3, 6, 43 )
pixel_size = 0.05
shaded = true
double_sided = false
alpha_cut = 1
text = "Coming soon"

[node name="Leaderboard" type="Label3D" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 14, 12, -12 )
pixel_size = 0.088
shaded = true
double_sided = false
alpha_cut = 1
text = "GORDONCITY
38.99 x_Megaioio_x
41.50 C4G1B1D3V
59.99 Tartiflette
Your best: 99.90"
horizontal_alignment = 0
vertical_alignment = 0

[node name="Leaderboard2" type="Label3D" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 14, 12, 3 )
pixel_size = 0.088
shaded = true
double_sided = false
alpha_cut = 1
text = "POLYTECH LAND
38.99 x_Megaioio_x
---   ---
---   ---
Your best: 99.90"
horizontal_alignment = 0
vertical_alignment = 0

[node name="LeaderboardTitle" type="Label3D" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 11, 14, 2 )
pixel_size = 0.2
shaded = true
double_sided = false
alpha_cut = 1
text = "Leaderboard"
uppercase = true

[editable path="Gordon"]
